--- a/css/test.css
+++ b/css/test.css
@@ -486,6 +486,8 @@ nav ul li a:hover {
     padding: 40px;
     width: 100%;
     position: absolute; /* Absolute positioning to center */
+    top: 50%; /* Position 50% from the top */
+    left: 50%; /* Position 50% from the left */
     transform: translate(-50%, -50%); /* Center the modal body */
     border-radius: 15px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
